2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxEntryText: Deprecate in favour of ComboBoxText.

	* gtk/gtkmm/comboboxtext.[h|cc]: Added a constructor with a bool has_entry 
	parameter.
	* gtk/gtkmm/comboboxentrytext.[h|cc]: Deprecate this whole class, telling 
	peopel to use ComboBoxText with has_entry=true, just as we have deprecated 
	ComboBoxEntry for Combobox with has_entry=true.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	Fix gtk_methods.defs.

	* gtk/src/gtk_methods.defs: Add back the gtk-unix-print-2.0 stuff that 
	I forget to mention when regenerating this.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	Deprecate Ruler.

	* gtk/src/ruler.hg: Also use #undef to fix the build.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	Main: Deprecate signal_quit() and signal_run().

	* gtk/src/main.[hg|ccg]: Also use #undef to fix the build.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	LinkButton: Deprecate set_uri_hook() and unset_uri_hook().

	* gtk/src/linkbutton.[hg|ccg]: Also use #undef to fix the build.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>>

	ComboBox: Add constructors with a bool has_entry property, and add methods.
	
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/combobox.[hg|ccg]: Added constructors with bool has_entry parameters,
	and added get_has_entry(), set_entry_text_column() and get_entry_text_column(), 
	so that the deprecation in my previous commit actually makes sense.

2010-11-25  Murray Cumming  <murrayc@murrayc.com>

	Deprecate GtkComboBoxEntry in favour of GtkComboBox with has_entry=true.

	* gtk/gtkmm/comboboxtext.h: Add a comment saying that we are not using 
	GtkComboBoxText yet (we use it in gtkmm-3.0) because we want to avoid breaking 
	ABI. This still works fine anyway. 
	* gtk/src/comboboxentry.[hg|ccg]: Deprecate this entire class in gtkmm.
	Undef GTK_DISABLE_DEPRECATED in the .cc file so this can build without 
	--enable-warnings=fatal.
