@@ -1,5 +1,13 @@
 2010-11-25  Murray Cumming  <murrayc@murrayc.com>
 
+	ComboBoxText, ComboBoxEntryText: Move the undefs to really fix the build.
+
+	* gtk/gtkmm/comboboxentrytext.cc:
+	* gtk/gtkmm/comboboxtext.cc: Add undef GTK_DISABLE_DEPRECATED before any 
+	other includes.
+
+2010-11-25  Murray Cumming  <murrayc@murrayc.com>
+
 	ComboBoxEntryText: Deprecate in favour of ComboBoxText.
 
 	* gtk/gtkmm/comboboxtext.[h|cc]: Added a constructor with a bool has_entry 
